# Fillit

Fillit/: first_part.c  fourth_part.c
Fillit/includes/: ft_isalnum.c  ft_putchar_fd.c  ft_strdel.c
Fillit/libft/: Makefile  ft_isascii.c  ft_memalloc.c  ft_memccpy.c  ft_memcmp.c  ft_memmove.c  ft_putchar.c  ft_putendl.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sort_array.c  ft_strcat.c  ft_strcpy.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlen.c  ft_strmap.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strsub.c  ft_tolower.c  ft_toupper.c  libft.h
Old/: clean_all_column.c  clean_all_row.c  fillit.c  fillit.h
Old/1_and_2_ parts/: CMakeLists.txt  Makefile  fillit.h  first_part.c  main.c  second_part.c  third_part.c
Old/Fillit/: CMakeLists.txt  fillit  fillit.h  main.c  second_part.c  third_part.c
Old/Fillit_123/: fillit.h  first_part.c  main.c  second_part.c  third_part.c
Old/Fillit_Itog/: fillit  fillit.h  second_part.c  third_part.c
Old/Fillit_Itog c Cmake/: CMakeLists.txt  Makefile  fillit.h  main.c  second_part.c  third_part.c
Old/Fillit_Itog c Cmake/includes/: ft_strlcat.c
Old/Fillit_Itog cкомпиленный Ошибками/: author  fillit  fillit.h  main.c  second_part.c  third_part.c
Old/Fillit_Itog with Norminette/: first_part.c  main.c  third_part.c
Old/Fillit_Itog С небольшими изменениями/: fillit.h  third_part.c
Old/For Dima/: CMakeLists.txt  grid.c  lib_fillit.h  main.c  matrices.c  read_input.c  solver.c  tetro_checker.c
Old/Function_minimal_squar/: CMakeLists.txt  main.c
Old/Last_Fillit/: fillit  fillit.h  second_part.c  third_part.c
Old/Last_Fillit_with_Cmake/: CMakeLists.txt  fillit  main.c  third_part.c
Old/Our_Fillit/: fillit  fillit.h  first_part.c  main.c
Old/Our_Fillit _Cmake/: CMakeLists.txt  fillit.h  first_part.c  main.c
Old/Our_Fillit_1/: first_part.c
Old/Our_Fillit_2/: Makefile  first_part.c  second_part.c
Old/Our_Fillit_with_Cmake/: CMakeLists.txt  fillit.h  main.c  third_part.c
(+35 files in other folders)
